CPHW2/y.output
Terminals unused in grammar

   BOOLEAN


Rules useless in parser due to conflicts

   92 initexpr: %empty

   97 increxpr: %empty


State 22 conflicts: 11 shift/reduce
State 68 conflicts: 1 reduce/reduce
State 77 conflicts: 1 shift/reduce
State 160 conflicts: 1 shift/reduce
State 180 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: program_body

    2 program_body: declaration_list
    3             | %empty

    4 declaration_list: declaration_list decl
    5                 | decl

    6 decl: func_decl
    7     | var_decl
    8     | const_decl

    9 func_decl: func_set ';'
   10          | func_set compound

   11 func_set: type ID '(' argument ')'

   12 var_decl: type variables ';'

   13 type: VOID
   14     | data_type

   15 data_type: INT
   16          | DOUBLE
   17          | FLOAT
   18          | STRING
   19          | BOOL

   20 variable: ID
   21         | ID index

   22 index: '[' expressions ']'
   23      | index '[' expressions ']'

   24 argument: nonEmptyArgument
   25         | %empty

   26 nonEmptyArgument: nonEmptyArgument ',' data_type variable
   27                 | data_type variable

   28 var_list: variable
   29         | assignment

   30 variables: nonEmptyVariables
   31          | %empty

   32 nonEmptyVariables: nonEmptyVariables ',' var_list
   33                  | var_list

   34 assignment: ID '=' expressions
   35           | ID index '=' '{' nonEmptyExpressions '}'

   36 assignments: nonEmptyAssignments
   37            | %empty

   38 nonEmptyAssignments: nonEmptyAssignments ',' assignment
   39                    | assignment

   40 const_decl: CONST data_type assignments ';'

   41 expression: function_call
   42           | STRCONTENT
   43           | INTEGER
   44           | REALNUMBER
   45           | TRUE
   46           | FALSE
   47           | variable

   48 nonEmptyExpressions: nonEmptyExpressions ',' expression
   49                    | expression

   50 expressions: '-' expressions
   51            | expressions '+' expressions
   52            | expressions '-' expressions
   53            | expressions '*' expressions
   54            | expressions '/' expressions
   55            | expressions '%' expressions
   56            | expressions '<' expressions
   57            | expressions LE expressions
   58            | expressions EQ expressions
   59            | expressions GE expressions
   60            | expressions '>' expressions
   61            | expressions NQ expressions
   62            | expressions AND expressions
   63            | expressions OR expressions
   64            | '!' expressions
   65            | '(' expressions ')'
   66            | expression

   67 state_list: compound
   68           | condition
   69           | simple
   70           | while
   71           | for
   72           | jump
   73           | function_call

   74 lists: lists state_list
   75      | lists var_decl
   76      | lists const_decl
   77      | state_list
   78      | %empty

   79 compound: '{' lists '}'

   80 simple: variable '=' expressions ';'
   81       | PRINT variable ';'
   82       | PRINT expressions ';'
   83       | READ variable ';'

   84 condition: IF '(' expressions ')' compound
   85          | IF '(' expressions ')' ELSE compound

   86 while: WHILE '(' expressions ')' compound
   87      | DO compound WHILE '(' expressions ')' ';'

   88 for: FOR '(' initexpr ';' ctrexpr ';' increxpr ')' compound

   89 initexpr: data_type assignments
   90         | assignments
   91         | function_call
   92         | %empty

   93 ctrexpr: expressions
   94        | %empty

   95 increxpr: assignments
   96         | function_call
   97         | %empty

   98 jump: RETURN expressions ';'
   99     | BREAK ';'
  100     | CONTINUE ';'

  101 expressionList: nonEmptyExpressionList
  102               | %empty

  103 nonEmptyExpressionList: nonEmptyExpressionList ',' expression
  104                       | expression

  105 function_call: ID '(' expressionList ')'
  106              | ID '(' expressionList ')' ';'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 64
'%' (37) 55
'(' (40) 11 65 84 85 86 87 88 105 106
')' (41) 11 65 84 85 86 87 88 105 106
'*' (42) 53
'+' (43) 51
',' (44) 26 32 38 48 103
'-' (45) 50 52
'/' (47) 54
';' (59) 9 12 40 80 81 82 83 87 88 98 99 100 106
'<' (60) 56
'=' (61) 34 35 80
'>' (62) 60
'[' (91) 22 23
']' (93) 22 23
'{' (123) 35 79
'}' (125) 35 79
error (256)
LE (258) 57
EQ (259) 58
GE (260) 59
NQ (261) 61
AND (262) 62
OR (263) 63
INTEGER (264) 43
REALNUMBER (265) 44
READ (266) 83
BOOLEAN (267)
WHILE (268) 86 87
DO (269) 87
IF (270) 84 85
ELSE (271) 85
TRUE (272) 45
FALSE (273) 46
FOR (274) 88
CONST (275) 40
INT (276) 15
PRINT (277) 81 82
BOOL (278) 19
VOID (279) 13
FLOAT (280) 17
DOUBLE (281) 16
STRING (282) 18
CONTINUE (283) 100
BREAK (284) 99
RETURN (285) 98
STRCONTENT (286) 42
ID (287) 11 20 21 34 35 105 106


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
program_body (52)
    on left: 2 3, on right: 1
declaration_list (53)
    on left: 4 5, on right: 2 4
decl (54)
    on left: 6 7 8, on right: 4 5
func_decl (55)
    on left: 9 10, on right: 6
func_set (56)
    on left: 11, on right: 9 10
var_decl (57)
    on left: 12, on right: 7 75
type (58)
    on left: 13 14, on right: 11 12
data_type (59)
    on left: 15 16 17 18 19, on right: 14 26 27 40 89
variable (60)
    on left: 20 21, on right: 26 27 28 47 80 81 83
index (61)
    on left: 22 23, on right: 21 23 35
argument (62)
    on left: 24 25, on right: 11
nonEmptyArgument (63)
    on left: 26 27, on right: 24 26
var_list (64)
    on left: 28 29, on right: 32 33
variables (65)
    on left: 30 31, on right: 12
nonEmptyVariables (66)
    on left: 32 33, on right: 30 32
assignment (67)
    on left: 34 35, on right: 29 38 39
assignments (68)
    on left: 36 37, on right: 40 89 90 95
nonEmptyAssignments (69)
    on left: 38 39, on right: 36 38
const_decl (70)
    on left: 40, on right: 8 76
expression (71)
    on left: 41 42 43 44 45 46 47, on right: 48 49 66 103 104
nonEmptyExpressions (72)
    on left: 48 49, on right: 35 48
expressions (73)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66, on right:
    22 23 34 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 80 82
    84 85 86 87 93 98
state_list (74)
    on left: 67 68 69 70 71 72 73, on right: 74 77
lists (75)
    on left: 74 75 76 77 78, on right: 74 75 76 79
compound (76)
    on left: 79, on right: 10 67 84 85 86 87 88
simple (77)
    on left: 80 81 82 83, on right: 69
condition (78)
    on left: 84 85, on right: 68
while (79)
    on left: 86 87, on right: 70
for (80)
    on left: 88, on right: 71
initexpr (81)
    on left: 89 90 91 92, on right: 88
ctrexpr (82)
    on left: 93 94, on right: 88
increxpr (83)
    on left: 95 96 97, on right: 88
jump (84)
    on left: 98 99 100, on right: 72
expressionList (85)
    on left: 101 102, on right: 105 106
nonEmptyExpressionList (86)
    on left: 103 104, on right: 101 103
function_call (87)
    on left: 105 106, on right: 41 73 91 96


State 0

    0 $accept: . program $end

    CONST   shift, and go to state 1
    INT     shift, and go to state 2
    BOOL    shift, and go to state 3
    VOID    shift, and go to state 4
    FLOAT   shift, and go to state 5
    DOUBLE  shift, and go to state 6
    STRING  shift, and go to state 7

    $default  reduce using rule 3 (program_body)

    program           go to state 8
    program_body      go to state 9
    declaration_list  go to state 10
    decl              go to state 11
    func_decl         go to state 12
    func_set          go to state 13
    var_decl          go to state 14
    type              go to state 15
    data_type         go to state 16
    const_decl        go to state 17


State 1

   40 const_decl: CONST . data_type assignments ';'

    INT     shift, and go to state 2
    BOOL    shift, and go to state 3
    FLOAT   shift, and go to state 5
    DOUBLE  shift, and go to state 6
    STRING  shift, and go to state 7

    data_type  go to state 18


State 2

   15 data_type: INT .

    $default  reduce using rule 15 (data_type)


State 3

   19 data_type: BOOL .

    $default  reduce using rule 19 (data_type)


State 4

   13 type: VOID .

    $default  reduce using rule 13 (type)


State 5

   17 data_type: FLOAT .

    $default  reduce using rule 17 (data_type)


State 6

   16 data_type: DOUBLE .

    $default  reduce using rule 16 (data_type)


State 7

   18 data_type: STRING .

    $default  reduce using rule 18 (data_type)


State 8

    0 $accept: program . $end

    $end  shift, and go to state 19


State 9

    1 program: program_body .

    $default  reduce using rule 1 (program)


State 10

    2 program_body: declaration_list .
    4 declaration_list: declaration_list . decl

    CONST   shift, and go to state 1
    INT     shift, and go to state 2
    BOOL    shift, and go to state 3
    VOID    shift, and go to state 4
    FLOAT   shift, and go to state 5
    DOUBLE  shift, and go to state 6
    STRING  shift, and go to state 7

    $default  reduce using rule 2 (program_body)

    decl        go to state 20
    func_decl   go to state 12
    func_set    go to state 13
    var_decl    go to state 14
    type        go to state 15
    data_type   go to state 16
    const_decl  go to state 17


State 11

    5 declaration_list: decl .

    $default  reduce using rule 5 (declaration_list)


State 12

    6 decl: func_decl .

    $default  reduce using rule 6 (decl)


State 13

    9 func_decl: func_set . ';'
   10          | func_set . compound

    ';'  shift, and go to state 21
    '{'  shift, and go to state 22

    compound  go to state 23


State 14

    7 decl: var_decl .

    $default  reduce using rule 7 (decl)


State 15

   11 func_set: type . ID '(' argument ')'
   12 var_decl: type . variables ';'

    ID  shift, and go to state 24

    $default  reduce using rule 31 (variables)

    variable           go to state 25
    var_list           go to state 26
    variables          go to state 27
    nonEmptyVariables  go to state 28
    assignment         go to state 29


State 16

   14 type: data_type .

    $default  reduce using rule 14 (type)


State 17

    8 decl: const_decl .

    $default  reduce using rule 8 (decl)


State 18

   40 const_decl: CONST data_type . assignments ';'

    ID  shift, and go to state 30

    $default  reduce using rule 37 (assignments)

    assignment           go to state 31
    assignments          go to state 32
    nonEmptyAssignments  go to state 33


State 19

    0 $accept: program $end .

    $default  accept


State 20

    4 declaration_list: declaration_list decl .

    $default  reduce using rule 4 (declaration_list)


State 21

    9 func_decl: func_set ';' .

    $default  reduce using rule 9 (func_decl)


State 22

   79 compound: '{' . lists '}'

    '{'       shift, and go to state 22
    READ      shift, and go to state 34
    WHILE     shift, and go to state 35
    DO        shift, and go to state 36
    IF        shift, and go to state 37
    FOR       shift, and go to state 38
    PRINT     shift, and go to state 39
    CONTINUE  shift, and go to state 40
    BREAK     shift, and go to state 41
    RETURN    shift, and go to state 42
    ID        shift, and go to state 43

    '{'       [reduce using rule 78 (lists)]
    READ      [reduce using rule 78 (lists)]
    WHILE     [reduce using rule 78 (lists)]
    DO        [reduce using rule 78 (lists)]
    IF        [reduce using rule 78 (lists)]
    FOR       [reduce using rule 78 (lists)]
    PRINT     [reduce using rule 78 (lists)]
    CONTINUE  [reduce using rule 78 (lists)]
    BREAK     [reduce using rule 78 (lists)]
    RETURN    [reduce using rule 78 (lists)]
    ID        [reduce using rule 78 (lists)]
    $default  reduce using rule 78 (lists)

    variable       go to state 44
    state_list     go to state 45
    lists          go to state 46
    compound       go to state 47
    simple         go to state 48
    condition      go to state 49
    while          go to state 50
    for            go to state 51
    jump           go to state 52
    function_call  go to state 53


State 23

   10 func_decl: func_set compound .

    $default  reduce using rule 10 (func_decl)


State 24

   11 func_set: type ID . '(' argument ')'
   20 variable: ID .
   21         | ID . index
   34 assignment: ID . '=' expressions
   35           | ID . index '=' '{' nonEmptyExpressions '}'

    '('  shift, and go to state 54
    '['  shift, and go to state 55
    '='  shift, and go to state 56

    $default  reduce using rule 20 (variable)

    index  go to state 57


State 25

   28 var_list: variable .

    $default  reduce using rule 28 (var_list)


State 26

   33 nonEmptyVariables: var_list .

    $default  reduce using rule 33 (nonEmptyVariables)


State 27

   12 var_decl: type variables . ';'

    ';'  shift, and go to state 58


State 28

   30 variables: nonEmptyVariables .
   32 nonEmptyVariables: nonEmptyVariables . ',' var_list

    ','  shift, and go to state 59

    $default  reduce using rule 30 (variables)


State 29

   29 var_list: assignment .

    $default  reduce using rule 29 (var_list)


State 30

   34 assignment: ID . '=' expressions
   35           | ID . index '=' '{' nonEmptyExpressions '}'

    '['  shift, and go to state 55
    '='  shift, and go to state 56

    index  go to state 60


State 31

   39 nonEmptyAssignments: assignment .

    $default  reduce using rule 39 (nonEmptyAssignments)


State 32

   40 const_decl: CONST data_type assignments . ';'

    ';'  shift, and go to state 61


State 33

   36 assignments: nonEmptyAssignments .
   38 nonEmptyAssignments: nonEmptyAssignments . ',' assignment

    ','  shift, and go to state 62

    $default  reduce using rule 36 (assignments)


State 34

   83 simple: READ . variable ';'

    ID  shift, and go to state 63

    variable  go to state 64


State 35

   86 while: WHILE . '(' expressions ')' compound

    '('  shift, and go to state 65


State 36

   87 while: DO . compound WHILE '(' expressions ')' ';'

    '{'  shift, and go to state 22

    compound  go to state 66


State 37

   84 condition: IF . '(' expressions ')' compound
   85          | IF . '(' expressions ')' ELSE compound

    '('  shift, and go to state 67


State 38

   88 for: FOR . '(' initexpr ';' ctrexpr ';' increxpr ')' compound

    '('  shift, and go to state 68


State 39

   81 simple: PRINT . variable ';'
   82       | PRINT . expressions ';'

    '('         shift, and go to state 69
    '-'         shift, and go to state 70
    '!'         shift, and go to state 71
    INTEGER     shift, and go to state 72
    REALNUMBER  shift, and go to state 73
    TRUE        shift, and go to state 74
    FALSE       shift, and go to state 75
    STRCONTENT  shift, and go to state 76
    ID          shift, and go to state 43

    variable       go to state 77
    expression     go to state 78
    expressions    go to state 79
    function_call  go to state 80


State 40

  100 jump: CONTINUE . ';'

    ';'  shift, and go to state 81


State 41

   99 jump: BREAK . ';'

    ';'  shift, and go to state 82


State 42

   98 jump: RETURN . expressions ';'

    '('         shift, and go to state 69
    '-'         shift, and go to state 70
    '!'         shift, and go to state 71
    INTEGER     shift, and go to state 72
    REALNUMBER  shift, and go to state 73
    TRUE        shift, and go to state 74
    FALSE       shift, and go to state 75
    STRCONTENT  shift, and go to state 76
    ID          shift, and go to state 43

    variable       go to state 83
    expression     go to state 78
    expressions    go to state 84
    function_call  go to state 80


State 43

   20 variable: ID .
   21         | ID . index
  105 function_call: ID . '(' expressionList ')'
  106              | ID . '(' expressionList ')' ';'

    '('  shift, and go to state 85
    '['  shift, and go to state 55

    $default  reduce using rule 20 (variable)

    index  go to state 86


State 44

   80 simple: variable . '=' expressions ';'

    '='  shift, and go to state 87


State 45

   77 lists: state_list .

    $default  reduce using rule 77 (lists)


State 46

   74 lists: lists . state_list
   75      | lists . var_decl
   76      | lists . const_decl
   79 compound: '{' lists . '}'

    '{'       shift, and go to state 22
    '}'       shift, and go to state 88
    READ      shift, and go to state 34
    WHILE     shift, and go to state 35
    DO        shift, and go to state 36
    IF        shift, and go to state 37
    FOR       shift, and go to state 38
    CONST     shift, and go to state 1
    INT       shift, and go to state 2
    PRINT     shift, and go to state 39
    BOOL      shift, and go to state 3
    VOID      shift, and go to state 4
    FLOAT     shift, and go to state 5
    DOUBLE    shift, and go to state 6
    STRING    shift, and go to state 7
    CONTINUE  shift, and go to state 40
    BREAK     shift, and go to state 41
    RETURN    shift, and go to state 42
    ID        shift, and go to state 43

    var_decl       go to state 89
    type           go to state 90
    data_type      go to state 16
    variable       go to state 44
    const_decl     go to state 91
    state_list     go to state 92
    compound       go to state 47
    simple         go to state 48
    condition      go to state 49
    while          go to state 50
    for            go to state 51
    jump           go to state 52
    function_call  go to state 53


State 47

   67 state_list: compound .

    $default  reduce using rule 67 (state_list)


State 48

   69 state_list: simple .

    $default  reduce using rule 69 (state_list)


State 49

   68 state_list: condition .

    $default  reduce using rule 68 (state_list)


State 50

   70 state_list: while .

    $default  reduce using rule 70 (state_list)


State 51

   71 state_list: for .

    $default  reduce using rule 71 (state_list)


State 52

   72 state_list: jump .

    $default  reduce using rule 72 (state_list)


State 53

   73 state_list: function_call .

    $default  reduce using rule 73 (state_list)


State 54

   11 func_set: type ID '(' . argument ')'

    INT     shift, and go to state 2
    BOOL    shift, and go to state 3
    FLOAT   shift, and go to state 5
    DOUBLE  shift, and go to state 6
    STRING  shift, and go to state 7

    $default  reduce using rule 25 (argument)

    data_type         go to state 93
    argument          go to state 94
    nonEmptyArgument  go to state 95


State 55

   22 index: '[' . expressions ']'

    '('         shift, and go to state 69
    '-'         shift, and go to state 70
    '!'         shift, and go to state 71
    INTEGER     shift, and go to state 72
    REALNUMBER  shift, and go to state 73
    TRUE        shift, and go to state 74
    FALSE       shift, and go to state 75
    STRCONTENT  shift, and go to state 76
    ID          shift, and go to state 43

    variable       go to state 83
    expression     go to state 78
    expressions    go to state 96
    function_call  go to state 80


State 56

   34 assignment: ID '=' . expressions

    '('         shift, and go to state 69
    '-'         shift, and go to state 70
    '!'         shift, and go to state 71
    INTEGER     shift, and go to state 72
    REALNUMBER  shift, and go to state 73
    TRUE        shift, and go to state 74
    FALSE       shift, and go to state 75
    STRCONTENT  shift, and go to state 76
    ID          shift, and go to state 43

    variable       go to state 83
    expression     go to state 78
    expressions    go to state 97
    function_call  go to state 80


State 57

   21 variable: ID index .
   23 index: index . '[' expressions ']'
   35 assignment: ID index . '=' '{' nonEmptyExpressions '}'

    '['  shift, and go to state 98
    '='  shift, and go to state 99

    $default  reduce using rule 21 (variable)


State 58

   12 var_decl: type variables ';' .

    $default  reduce using rule 12 (var_decl)


State 59

   32 nonEmptyVariables: nonEmptyVariables ',' . var_list

    ID  shift, and go to state 100

    variable    go to state 25
    var_list    go to state 101
    assignment  go to state 29


State 60

   23 index: index . '[' expressions ']'
   35 assignment: ID index . '=' '{' nonEmptyExpressions '}'

    '['  shift, and go to state 98
    '='  shift, and go to state 99


State 61

   40 const_decl: CONST data_type assignments ';' .

    $default  reduce using rule 40 (const_decl)


State 62

   38 nonEmptyAssignments: nonEmptyAssignments ',' . assignment

    ID  shift, and go to state 30

    assignment  go to state 102


State 63

   20 variable: ID .
   21         | ID . index

    '['  shift, and go to state 55

    $default  reduce using rule 20 (variable)

    index  go to state 86


State 64

   83 simple: READ variable . ';'

    ';'  shift, and go to state 103


State 65

   86 while: WHILE '(' . expressions ')' compound

    '('         shift, and go to state 69
    '-'         shift, and go to state 70
    '!'         shift, and go to state 71
    INTEGER     shift, and go to state 72
    REALNUMBER  shift, and go to state 73
    TRUE        shift, and go to state 74
    FALSE       shift, and go to state 75
    STRCONTENT  shift, and go to state 76
    ID          shift, and go to state 43

    variable       go to state 83
    expression     go to state 78
    expressions    go to state 104
    function_call  go to state 80


State 66

   87 while: DO compound . WHILE '(' expressions ')' ';'

    WHILE  shift, and go to state 105


State 67

   84 condition: IF '(' . expressions ')' compound
   85          | IF '(' . expressions ')' ELSE compound

    '('         shift, and go to state 69
    '-'         shift, and go to state 70
    '!'         shift, and go to state 71
    INTEGER     shift, and go to state 72
    REALNUMBER  shift, and go to state 73
    TRUE        shift, and go to state 74
    FALSE       shift, and go to state 75
    STRCONTENT  shift, and go to state 76
    ID          shift, and go to state 43

    variable       go to state 83
    expression     go to state 78
    expressions    go to state 106
    function_call  go to state 80


State 68

   88 for: FOR '(' . initexpr ';' ctrexpr ';' increxpr ')' compound

    INT     shift, and go to state 2
    BOOL    shift, and go to state 3
    FLOAT   shift, and go to state 5
    DOUBLE  shift, and go to state 6
    STRING  shift, and go to state 7
    ID      shift, and go to state 107

    ';'       reduce using rule 37 (assignments)
    ';'       [reduce using rule 92 (initexpr)]
    $default  reduce using rule 37 (assignments)

    data_type            go to state 108
    assignment           go to state 31
    assignments          go to state 109
    nonEmptyAssignments  go to state 33
    initexpr             go to state 110
    function_call        go to state 111


State 69

   65 expressions: '(' . expressions ')'

    '('         shift, and go to state 69
    '-'         shift, and go to state 70
    '!'         shift, and go to state 71
    INTEGER     shift, and go to state 72
    REALNUMBER  shift, and go to state 73
    TRUE        shift, and go to state 74
    FALSE       shift, and go to state 75
    STRCONTENT  shift, and go to state 76
    ID          shift, and go to state 43

    variable       go to state 83
    expression     go to state 78
    expressions    go to state 112
    function_call  go to state 80


State 70

   50 expressions: '-' . expressions

    '('         shift, and go to state 69
    '-'         shift, and go to state 70
    '!'         shift, and go to state 71
    INTEGER     shift, and go to state 72
    REALNUMBER  shift, and go to state 73
    TRUE        shift, and go to state 74
    FALSE       shift, and go to state 75
    STRCONTENT  shift, and go to state 76
    ID          shift, and go to state 43

    variable       go to state 83
    expression     go to state 78
    expressions    go to state 113
    function_call  go to state 80


State 71

   64 expressions: '!' . expressions

    '('         shift, and go to state 69
    '-'         shift, and go to state 70
    '!'         shift, and go to state 71
    INTEGER     shift, and go to state 72
    REALNUMBER  shift, and go to state 73
    TRUE        shift, and go to state 74
    FALSE       shift, and go to state 75
    STRCONTENT  shift, and go to state 76
    ID          shift, and go to state 43

    variable       go to state 83
    expression     go to state 78
    expressions    go to state 114
    function_call  go to state 80


State 72

   43 expression: INTEGER .

    $default  reduce using rule 43 (expression)


State 73

   44 expression: REALNUMBER .

    $default  reduce using rule 44 (expression)


State 74

   45 expression: TRUE .

    $default  reduce using rule 45 (expression)


State 75

   46 expression: FALSE .

    $default  reduce using rule 46 (expression)


State 76

   42 expression: STRCONTENT .

    $default  reduce using rule 42 (expression)


State 77

   47 expression: variable .
   81 simple: PRINT variable . ';'

    ';'  shift, and go to state 115

    ';'       [reduce using rule 47 (expression)]
    $default  reduce using rule 47 (expression)


State 78

   66 expressions: expression .

    $default  reduce using rule 66 (expressions)


State 79

   51 expressions: expressions . '+' expressions
   52            | expressions . '-' expressions
   53            | expressions . '*' expressions
   54            | expressions . '/' expressions
   55            | expressions . '%' expressions
   56            | expressions . '<' expressions
   57            | expressions . LE expressions
   58            | expressions . EQ expressions
   59            | expressions . GE expressions
   60            | expressions . '>' expressions
   61            | expressions . NQ expressions
   62            | expressions . AND expressions
   63            | expressions . OR expressions
   82 simple: PRINT expressions . ';'

    ';'  shift, and go to state 116
    '+'  shift, and go to state 117
    '-'  shift, and go to state 118
    '*'  shift, and go to state 119
    '/'  shift, and go to state 120
    '%'  shift, and go to state 121
    '<'  shift, and go to state 122
    LE   shift, and go to state 123
    EQ   shift, and go to state 124
    GE   shift, and go to state 125
    '>'  shift, and go to state 126
    NQ   shift, and go to state 127
    AND  shift, and go to state 128
    OR   shift, and go to state 129


State 80

   41 expression: function_call .

    $default  reduce using rule 41 (expression)


State 81

  100 jump: CONTINUE ';' .

    $default  reduce using rule 100 (jump)


State 82

   99 jump: BREAK ';' .

    $default  reduce using rule 99 (jump)


State 83

   47 expression: variable .

    $default  reduce using rule 47 (expression)


State 84

   51 expressions: expressions . '+' expressions
   52            | expressions . '-' expressions
   53            | expressions . '*' expressions
   54            | expressions . '/' expressions
   55            | expressions . '%' expressions
   56            | expressions . '<' expressions
   57            | expressions . LE expressions
   58            | expressions . EQ expressions
   59            | expressions . GE expressions
   60            | expressions . '>' expressions
   61            | expressions . NQ expressions
   62            | expressions . AND expressions
   63            | expressions . OR expressions
   98 jump: RETURN expressions . ';'

    ';'  shift, and go to state 130
    '+'  shift, and go to state 117
    '-'  shift, and go to state 118
    '*'  shift, and go to state 119
    '/'  shift, and go to state 120
    '%'  shift, and go to state 121
    '<'  shift, and go to state 122
    LE   shift, and go to state 123
    EQ   shift, and go to state 124
    GE   shift, and go to state 125
    '>'  shift, and go to state 126
    NQ   shift, and go to state 127
    AND  shift, and go to state 128
    OR   shift, and go to state 129


State 85

  105 function_call: ID '(' . expressionList ')'
  106              | ID '(' . expressionList ')' ';'

    INTEGER     shift, and go to state 72
    REALNUMBER  shift, and go to state 73
    TRUE        shift, and go to state 74
    FALSE       shift, and go to state 75
    STRCONTENT  shift, and go to state 76
    ID          shift, and go to state 43

    $default  reduce using rule 102 (expressionList)

    variable                go to state 83
    expression              go to state 131
    expressionList          go to state 132
    nonEmptyExpressionList  go to state 133
    function_call           go to state 80


State 86

   21 variable: ID index .
   23 index: index . '[' expressions ']'

    '['  shift, and go to state 98

    $default  reduce using rule 21 (variable)


State 87

   80 simple: variable '=' . expressions ';'

    '('         shift, and go to state 69
    '-'         shift, and go to state 70
    '!'         shift, and go to state 71
    INTEGER     shift, and go to state 72
    REALNUMBER  shift, and go to state 73
    TRUE        shift, and go to state 74
    FALSE       shift, and go to state 75
    STRCONTENT  shift, and go to state 76
    ID          shift, and go to state 43

    variable       go to state 83
    expression     go to state 78
    expressions    go to state 134
    function_call  go to state 80


State 88

   79 compound: '{' lists '}' .

    $default  reduce using rule 79 (compound)


State 89

   75 lists: lists var_decl .

    $default  reduce using rule 75 (lists)


State 90

   12 var_decl: type . variables ';'

    ID  shift, and go to state 100

    $default  reduce using rule 31 (variables)

    variable           go to state 25
    var_list           go to state 26
    variables          go to state 27
    nonEmptyVariables  go to state 28
    assignment         go to state 29


State 91

   76 lists: lists const_decl .

    $default  reduce using rule 76 (lists)


State 92

   74 lists: lists state_list .

    $default  reduce using rule 74 (lists)


State 93

   27 nonEmptyArgument: data_type . variable

    ID  shift, and go to state 63

    variable  go to state 135


State 94

   11 func_set: type ID '(' argument . ')'

    ')'  shift, and go to state 136


State 95

   24 argument: nonEmptyArgument .
   26 nonEmptyArgument: nonEmptyArgument . ',' data_type variable

    ','  shift, and go to state 137

    $default  reduce using rule 24 (argument)


State 96

   22 index: '[' expressions . ']'
   51 expressions: expressions . '+' expressions
   52            | expressions . '-' expressions
   53            | expressions . '*' expressions
   54            | expressions . '/' expressions
   55            | expressions . '%' expressions
   56            | expressions . '<' expressions
   57            | expressions . LE expressions
   58            | expressions . EQ expressions
   59            | expressions . GE expressions
   60            | expressions . '>' expressions
   61            | expressions . NQ expressions
   62            | expressions . AND expressions
   63            | expressions . OR expressions
